[package]
name = "burn-n-ids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#training a Network Intrusion Detection model(N-IDS) using the Rust programming language.

[dependencies]
burn = { version = "0.13.2", features = ["train", "wgpu"] }
serde = "1.0.209"
